kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sunsten-ingress
  namespace: sunsten
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod  
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "50m"
spec:
  tls:
    - hosts:
      - sunsten.norscodes.com
      - sunsten.org
      - www.sunsten.org
      secretName: sunsten-cert
  rules:
    - host: sunsten.norscodes.com
      http:
        paths:
        - backend:
            serviceName: sunsten-frontend-service
            servicePort: 81
    - host: sunsten.org
      http:
        paths:
        - backend:
            serviceName: sunsten-frontend-service
            servicePort: 81
    - host: www.sunsten.org
      http:
        paths:
        - backend:
            serviceName: sunsten-frontend-service
            servicePort: 81
